--- a/MusicClubManager.Cms.Wpf/Views/AgendaView.xaml
+++ b/MusicClubManager.Cms.Wpf/Views/AgendaView.xaml
@@ -15,6 +15,8 @@
 
         <c:PerformanceEndConverter x:Key="PerformanceEndConverter" />
 
+        <c:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+
         <CollectionViewSource x:Key='Doors' Source="{Binding PagedServiceResult.Data}">
             <CollectionViewSource.GroupDescriptions >
                 <PropertyGroupDescription PropertyName="LineupResult.Id"  />
@@ -22,71 +24,81 @@
         </CollectionViewSource>
     </UserControl.Resources>
 
-    <StackPanel Orientation="Horizontal"  >
-        <StackPanel>
-            <ListView ItemsSource="{Binding Source={StaticResource Doors}}" x:Name="ListView" >
-                <ListView.GroupStyle>
-                    <GroupStyle>
-                        <GroupStyle.ContainerStyle>
-                            <Style TargetType="{x:Type GroupItem}">
-                                <Setter Property="Margin" Value="0,0,0,5"/>
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type GroupItem}">
-                                            <Expander IsExpanded="True" >
-                                                <Expander.Header>
-                                                    <TextBlock  FontWeight="Bold" FontSize="16">
+    <Grid>
+        <TextBlock Text="Loading..." HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="24"
+             Visibility="{Binding IsReady, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=True}"/>
+
+        <StackPanel 
+            Visibility="{Binding IsReady, Converter={StaticResource BooleanToVisibilityConverter}, ConverterParameter=False}"
+            
+            Orientation="Horizontal"  >
+            <StackPanel>
+                <ListView ItemsSource="{Binding Source={StaticResource Doors}}" x:Name="ListView" >
+                    <ListView.GroupStyle>
+                        <GroupStyle>
+                            <GroupStyle.ContainerStyle>
+                                <Style TargetType="{x:Type GroupItem}">
+                                    <Setter Property="Margin" Value="0,0,0,5"/>
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type GroupItem}">
+                                                <Expander IsExpanded="True" >
+                                                    <Expander.Header>
+                                                        <TextBlock  FontWeight="Bold" FontSize="16">
                                                         <Run Text="{Binding Path=Items[0].LineupResult.Doors, StringFormat=\{0:d\}}" />
                                                         <Run Text="{Binding Path=Items[0].LineupResult.Name}" />
-                                                    </TextBlock>
-                                                </Expander.Header>
-                                                <Expander.Content>
-                                                    <ItemsPresenter />
-                                                </Expander.Content>
-                                            </Expander>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </GroupStyle.ContainerStyle>
-                    </GroupStyle>
-                </ListView.GroupStyle>
+                                                        </TextBlock>
+                                                    </Expander.Header>
+                                                    <Expander.Content>
+                                                        <ItemsPresenter />
+                                                    </Expander.Content>
+                                                </Expander>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </GroupStyle.ContainerStyle>
+                        </GroupStyle>
+                    </ListView.GroupStyle>
 
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Date" DisplayMemberBinding="{Binding Start, StringFormat=\{0:dddd\}}" />
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="Date" DisplayMemberBinding="{Binding Start, StringFormat=\{0:dddd\}}" />
 
-                        <GridViewColumn Header="Start" DisplayMemberBinding="{Binding Start, StringFormat=\{0:HH:mm\}}" />
+                            <GridViewColumn Header="Start" DisplayMemberBinding="{Binding Start, StringFormat=\{0:HH:mm\}}" />
 
-                        <GridViewColumn Header="End" >
-                            <GridViewColumn.CellTemplate>
-                                <DataTemplate>
-                                    <TextBlock>
-                                        <TextBlock.Text>
-                                            <MultiBinding Converter="{StaticResource PerformanceEndConverter }">
-                                                <Binding Path="Start" />
-                                                <Binding Path="Duration" />
-                                            </MultiBinding>
-                                        </TextBlock.Text>
-                                    </TextBlock>
-                                </DataTemplate>
-                            </GridViewColumn.CellTemplate>
-                        </GridViewColumn>
+                            <GridViewColumn Header="End" >
+                                <GridViewColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <TextBlock>
+                                            <TextBlock.Text>
+                                                <MultiBinding Converter="{StaticResource PerformanceEndConverter }">
+                                                    <Binding Path="Start" />
+                                                    <Binding Path="Duration" />
+                                                </MultiBinding>
+                                            </TextBlock.Text>
+                                        </TextBlock>
+                                    </DataTemplate>
+                                </GridViewColumn.CellTemplate>
+                            </GridViewColumn>
 
-                        <GridViewColumn Header="Artist" DisplayMemberBinding="{Binding ArtistResult.Name}"/>
-                    </GridView>
-                </ListView.View>
-            </ListView>
+                            <GridViewColumn Header="Artist" DisplayMemberBinding="{Binding ArtistResult.Name}"/>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
 
-            <uc:PaginationUserControl DataContext="{Binding PaginationViewModel}"/>
+                <uc:PaginationUserControl DataContext="{Binding PaginationViewModel}"/>
+            </StackPanel>
+
+            <StackPanel>
+                <TextBox Text="{Binding Path=SelectedItem.ArtistResult.Name, ElementName=ListView}" />
+
+                <Image Source="{Binding Path=SelectedItem.ArtistResult.ImageResult.Id, ElementName=ListView, Converter={StaticResource ImageConverter}}" ></Image>
+
+                <!--<Button Content="SAVE" Command="{Binding UpdateCommand}" CommandParameter="{Binding Path=SelectedItem, ElementName=ListView}" />-->
+            </StackPanel>
         </StackPanel>
+    </Grid>
+    
 
-        <StackPanel>
-            <TextBox Text="{Binding Path=SelectedItem.ArtistResult.Name, ElementName=ListView}" />
-
-            <Image Source="{Binding Path=SelectedItem.ArtistResult.ImageResult.Id, ElementName=ListView, Converter={StaticResource ImageConverter}}" ></Image>
-
-            <!--<Button Content="SAVE" Command="{Binding UpdateCommand}" CommandParameter="{Binding Path=SelectedItem, ElementName=ListView}" />-->
-        </StackPanel>
-    </StackPanel>
 </UserControl>
