--- a/MusicClubManager.Cms.Wpf/Views/HomeView.xaml
+++ b/MusicClubManager.Cms.Wpf/Views/HomeView.xaml
@@ -4,9 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MusicClubManager.Cms.Wpf.Views"
+             xmlns:uc="clr-namespace:MusicClubManager.Cms.Wpf.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Label Content="{Binding Title}" />
-    </Grid>
+        <uc:CalendarUserControl />
 </UserControl>
