--- a/MusicClubManager.Cms.Wpf/MainWindow.xaml
+++ b/MusicClubManager.Cms.Wpf/MainWindow.xaml
@@ -9,7 +9,7 @@
         mc:Ignorable="d"
         Title="Music Club Manager" Height="450" Width="800">
     <Window.Resources>
-        <DataTemplate DataType="{x:Type vms:HomeViewModel}">
+        <DataTemplate DataType="{x:Type vms:CalendarViewModel}">
             <views:HomeView />
         </DataTemplate>
 
@@ -56,7 +56,7 @@
                 </Style>
             </StackPanel.Style>
 
-            <Button Content="HOME" Command="{Binding NavigateCommand}" CommandParameter="Home" />
+            <Button Content="HOME" Command="{Binding NavigateCommand}" CommandParameter="Calendar" />
 
             <Button Content="AGENDA" Command="{Binding NavigateCommand}" CommandParameter="Agenda" />
 
