--- a/MusicClubManager.Cms.Wpf/UserControls/CalendarUserControl.xaml
+++ b/MusicClubManager.Cms.Wpf/UserControls/CalendarUserControl.xaml
@@ -60,11 +60,24 @@
             </Grid.RowDefinitions>
 
             <Border Grid.Row="0" Grid.ColumnSpan="7" Style="{StaticResource HeaderBorder}">
-                <TextBlock Text="{Binding Year}" HorizontalAlignment="Center" FontWeight="Bold"/>
+                <DockPanel>
+                    <Button Command="{Binding PreviousYearCommand}" HorizontalAlignment="Left">Previous</Button>
+                    
+                    <TextBlock Text="{Binding Year}" Background="Orange" HorizontalAlignment="Center"  FontWeight="Bold"/>
+
+                    <Button HorizontalAlignment="Right">Next</Button>
+                </DockPanel>
+
             </Border>
 
             <Border Grid.Row="1" Grid.ColumnSpan="7" Style="{StaticResource HeaderBorder}">
-                <TextBlock Text="{Binding Month, Converter={StaticResource MonthConverter}}" HorizontalAlignment="Center" FontWeight="Bold"/>
+                <StackPanel Orientation="Horizontal">
+                    <Button Command="{Binding PreviousMonthCommand}" HorizontalAlignment="Left">Previous</Button>
+                    
+                    <TextBlock Text="{Binding Month, Converter={StaticResource MonthConverter}}" HorizontalAlignment="Center" FontWeight="Bold"/>
+                   
+                    <Button HorizontalAlignment="Right">Next</Button>
+                </StackPanel>
             </Border>
 
             <Border Grid.Row="2" Grid.Column="0" Style="{StaticResource HeaderBorder}">
